# astroTools

./: CMakeLists.txt  README.md  code_version.sh
CMake/: CompilerFlags_Fortran.cmake  FindLibTheSky.cmake
doc/: INSTALL  Makefile  README  astrotools.1
man/man7/: astrotools.7
source_old/: cal2jd.f  cal2unix.f  eq2hor.f  gps2cal.f
source_old_old/: precess_old.f
src/: add_magnitudes.f90  arcsec2deg_rad.f90  azimuth2winddir.f90  cal2gps.f90  cal2jd.f90  cal2times.f90  cal2unix.f90  comet_eq2ap.f90  date_time_calc.f90  dd2dms_rad.f90  distance_in_sky_ecl.f90  distance_in_sky_eq.f90  dms2dd_rad.f90  eq2hor.f90  functions.f90  gps2cal.f90  jd2cal.f90  jd2times.f90  nagfor.f90  planetdata.f90  rad2dd_dms.f90  rect2spher.f90  settings.f90  time2hms.f90  unix2cal.f90
tools/doc/: Makefile
tools/source/: Makefile  accuracy.f  addmagnitudes.f  cal2gps.f  cal2unix.f  ddd2dms.f  deg2rad.f  distance_on_earth.f  eq2hor.f  functions.f  gps2cal.f  jd2cal.f  precess.f  rad2deg.f  unix2cal.f
tools/source_old/: az2wd.f  cal2jd.f  deltat.f  ecl2eq.f  eq2gal.f  functions.f  gps2cal.f  julian.f  moondiam.f  precession.txt  timestamp2cal.f
tools/source_old_old/: arcsec2rad.f  distance_in_sky.f  dms2ddd.f  dms2rad.f  eq2ecl.f  gal2eq.f  hms2rad.f  julian.f  precess.f
tools/src/: cal2jd.f90  comet_eq2ap.f90  dd2dms_rad.f90  ddd2dms.f90  dms2dd_rad.f90  functions.f90  jd2cal.f90  rad2dd_dms.f90  rect2spher.f90
